# bokeh_sampledata

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: codeql.yml  test.yml
conda/: meta.yaml
src/bokeh_sampledata/: __init__.py  airport_routes.py  airports.py  browsers.py  cycling.py  emissions.py  iris.py  sample_geojson.py  unemployment.py  us_counties.py  us_holidays.py
src/bokeh_sampledata/_data/: cycling.csv
tests/unit/bokeh_sampledata/: test___init__.py  test_airport_routes.py  test_airports.py  test_anscombe.py  test_antibiotics.py  test_autompg.py  test_autompg2.py  test_browsers.py  test_commits.py  test_cycling.py  test_daylight.py  test_degrees.py  test_gapminder.py  test_glucose.py  test_haar_cascade.py  test_iris.py  test_les_mis.py  test_movies_data.py  test_mtb.py  test_olympics2014.py  test_perceptions.py  test_periodic_table.py  test_population.py  test_sample_geojson.py  test_sample_superstore.py  test_sea_surface_temperature.py  test_sprint.py  test_stocks.py  test_unemployment.py  test_unemployment1948.py  test_us_cities.py  test_us_counties.py  test_us_holidays.py  test_us_marriages_divorces.py  test_us_states.py  test_world_cities.py
